Added logging of RSM collection using log4j.